--- a/1.0 codigo-fonte.ipynb
+++ b/1.0 codigo-fonte.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iniciando tratamento de dados - Arquivo aberto disponibilizado pelo BACEN: https://www.bcb.gov.br/fis/Consorcios/port/consorcio_banco_de_dados.asp?frame=1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
