Organizando left join

--- a/1.0 codigo-fonte.ipynb
+++ b/1.0 codigo-fonte.ipynb
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "display(df_ordenado_quantidade.columns)\n",
+    "display(df_uf2.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -1488,11 +1499,11 @@
        "      <th>qtd_cotas_nao_utilizadas</th>\n",
        "      <th>NPL_CALC</th>\n",
        "      <th>NPL_CALC_NCONT</th>\n",
-       "      <th>nm_empresa</th>\n",
        "      <th>Unidade_da_Federação_do_consorciado</th>\n",
        "      <th>qtd_apareceu_estado</th>\n",
        "      <th>qtd_ativos_nao_contemplad</th>\n",
        "      <th>qtd_adesao</th>\n",
+       "      <th>nm_empresa</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1507,11 +1518,11 @@
        "      <td>25847</td>\n",
        "      <td>2.414977</td>\n",
        "      <td>6.910922</td>\n",
-       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "      <td>SP</td>\n",
        "      <td>4.0</td>\n",
        "      <td>278125.0</td>\n",
        "      <td>50067.0</td>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1524,11 +1535,11 @@
        "      <td>25847</td>\n",
        "      <td>2.414977</td>\n",
        "      <td>6.910922</td>\n",
-       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "      <td>MG</td>\n",
        "      <td>4.0</td>\n",
        "      <td>50708.0</td>\n",
        "      <td>10913.0</td>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1541,11 +1552,11 @@
        "      <td>25847</td>\n",
        "      <td>2.414977</td>\n",
        "      <td>6.910922</td>\n",
-       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "      <td>RJ</td>\n",
        "      <td>4.0</td>\n",
        "      <td>43867.0</td>\n",
        "      <td>6311.0</td>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1558,11 +1569,11 @@
        "      <td>25847</td>\n",
        "      <td>2.414977</td>\n",
        "      <td>6.910922</td>\n",
-       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "      <td>PR</td>\n",
        "      <td>4.0</td>\n",
        "      <td>43075.0</td>\n",
        "      <td>7012.0</td>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1575,11 +1586,11 @@
        "      <td>25847</td>\n",
        "      <td>2.414977</td>\n",
        "      <td>6.910922</td>\n",
-       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "      <td>BA</td>\n",
        "      <td>4.0</td>\n",
        "      <td>42776.0</td>\n",
        "      <td>7020.0</td>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1609,11 +1620,11 @@
        "      <td>11951</td>\n",
        "      <td>13.613403</td>\n",
        "      <td>18.858998</td>\n",
-       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
        "      <td>RR</td>\n",
        "      <td>4.0</td>\n",
        "      <td>504.0</td>\n",
        "      <td>77.0</td>\n",
+       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>79</th>\n",
@@ -1626,11 +1637,11 @@
        "      <td>11951</td>\n",
        "      <td>13.613403</td>\n",
        "      <td>18.858998</td>\n",
-       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
        "      <td>SE</td>\n",
        "      <td>4.0</td>\n",
        "      <td>492.0</td>\n",
        "      <td>153.0</td>\n",
+       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80</th>\n",
@@ -1643,11 +1654,11 @@
        "      <td>11951</td>\n",
        "      <td>13.613403</td>\n",
        "      <td>18.858998</td>\n",
-       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
        "      <td>AC</td>\n",
        "      <td>4.0</td>\n",
        "      <td>347.0</td>\n",
        "      <td>91.0</td>\n",
+       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81</th>\n",
@@ -1728,19 +1739,6 @@
        "81                      7230   1.554026        6.870223   \n",
        "82                      8194   3.844245        5.891843   \n",
        "\n",
-       "                                           nm_empresa  \\\n",
-       "0   BRADESCO CONS. LTDA.                          ...   \n",
-       "1   BRADESCO CONS. LTDA.                          ...   \n",
-       "2   BRADESCO CONS. LTDA.                          ...   \n",
-       "3   BRADESCO CONS. LTDA.                          ...   \n",
-       "4   BRADESCO CONS. LTDA.                          ...   \n",
-       "..                                                ...   \n",
-       "78  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...   \n",
-       "79  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...   \n",
-       "80  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...   \n",
-       "81                                                NaN   \n",
-       "82                                                NaN   \n",
-       "\n",
        "   Unidade_da_Federação_do_consorciado  qtd_apareceu_estado  \\\n",
        "0                                   SP                  4.0   \n",
        "1                                   MG                  4.0   \n",
@@ -1754,18 +1752,31 @@
        "81                                 NaN                  NaN   \n",
        "82                                 NaN                  NaN   \n",
        "\n",
-       "    qtd_ativos_nao_contemplad  qtd_adesao  \n",
-       "0                    278125.0     50067.0  \n",
-       "1                     50708.0     10913.0  \n",
-       "2                     43867.0      6311.0  \n",
-       "3                     43075.0      7012.0  \n",
-       "4                     42776.0      7020.0  \n",
-       "..                        ...         ...  \n",
-       "78                      504.0        77.0  \n",
-       "79                      492.0       153.0  \n",
-       "80                      347.0        91.0  \n",
-       "81                        NaN         NaN  \n",
-       "82                        NaN         NaN  \n",
+       "    qtd_ativos_nao_contemplad  qtd_adesao  \\\n",
+       "0                    278125.0     50067.0   \n",
+       "1                     50708.0     10913.0   \n",
+       "2                     43867.0      6311.0   \n",
+       "3                     43075.0      7012.0   \n",
+       "4                     42776.0      7020.0   \n",
+       "..                        ...         ...   \n",
+       "78                      504.0        77.0   \n",
+       "79                      492.0       153.0   \n",
+       "80                      347.0        91.0   \n",
+       "81                        NaN         NaN   \n",
+       "82                        NaN         NaN   \n",
+       "\n",
+       "                                           nm_empresa  \n",
+       "0   BRADESCO CONS. LTDA.                          ...  \n",
+       "1   BRADESCO CONS. LTDA.                          ...  \n",
+       "2   BRADESCO CONS. LTDA.                          ...  \n",
+       "3   BRADESCO CONS. LTDA.                          ...  \n",
+       "4   BRADESCO CONS. LTDA.                          ...  \n",
+       "..                                                ...  \n",
+       "78  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...  \n",
+       "79  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...  \n",
+       "80  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...  \n",
+       "81                                                NaN  \n",
+       "82                                                NaN  \n",
        "\n",
        "[83 rows x 14 columns]"
       ]
@@ -1775,23 +1786,12 @@
     }
    ],
    "source": [
-    "display(df_ordenado_quantidade.columns)\n",
-    "display(df_uf2.columns)\n",
+    "colunas_desejadas = ['Unidade_da_Federação_do_consorciado', 'qtd_apareceu_estado', 'qtd_ativos_nao_contemplad', 'qtd_adesao', 'nm_empresa']\n",
     "\n",
-    "\n",
-    "\n",
-    "resultado_left_join = pd.merge(df_ordenado_quantidade, df_uf2, \n",
+    "resultado_left_join = pd.merge(df_ordenado_quantidade, df_uf2[colunas_desejadas], \n",
     "                               left_on='#Nome_da_Administradora', right_on='nm_empresa', how='left')\n",
-    "\n",
     "display(resultado_left_join)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
