alterando e salvando arquivo

--- a/1.0 codigo-fonte.ipynb
+++ b/1.0 codigo-fonte.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1123,26 +1123,33 @@
     }
    ],
    "source": [
-    "df_ordenado_quantidade = df3.groupby('#Nome_da_Administradora').agg(qtd=('#Nome_da_Administradora', 'size'),\n",
+    "df4 = df3.groupby('#Nome_da_Administradora').agg(qtd=('#Nome_da_Administradora', 'size'),\n",
     "                                                                   qtd_cotas_excluidas=('Quantidade_de_cotas_excluídas', 'sum')\n",
     "                                                                   ,qtd_cotas_ativas=('Quantidade_de_cotas_ativas_em_dia', 'sum')\n",
     "                                                                   ,NPL=('Quantidade_de_cotas_ativas_contempladas_inadimplentes', 'sum')\n",
     "                                                                   ,NPL_NAO_CONT=('Quantidade_de_cotas_ativas_não_contempladas_inadimplentes', 'sum')\n",
     "                                                                   ,qtd_cotas_nao_utilizadas=('Quantidade_de_cotas_ativas_com_crédito_pendente_de_utilização', 'sum')).reset_index()\n",
     "\n",
-    "df_ordenado_quantidade = df_ordenado_quantidade.sort_values(by='qtd', ascending=False)\n",
+    "df4 = df4.sort_values(by='qtd', ascending=False)\n",
     "\n",
     "\n",
-    "df_ordenado_quantidade['NPL_CALC'] = (df_ordenado_quantidade['NPL'] / df_ordenado_quantidade['qtd_cotas_ativas']) * 100\n",
-    "df_ordenado_quantidade['NPL_CALC_NCONT'] = (df_ordenado_quantidade['NPL_NAO_CONT'] / df_ordenado_quantidade['qtd_cotas_ativas']) * 100\n",
+    "df4['NPL_CALC'] = (df4['NPL'] / df4['qtd_cotas_ativas']) * 100\n",
+    "df4['NPL_CALC_NCONT'] = (df4['NPL_NAO_CONT'] / df4['qtd_cotas_ativas']) * 100\n",
     "\n",
     "\n",
-    "display(df_ordenado_quantidade)"
+    "display(df4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Empresas que mais aparecem "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1157,9 +1164,9 @@
     }
    ],
    "source": [
-    "df_ordenado_quantidade = df_ordenado_quantidade.head(5)\n",
+    "df4 = df4.head(5)\n",
     "\n",
-    "grafico_barras = plt.bar(df_ordenado_quantidade['#Nome_da_Administradora'], df_ordenado_quantidade['qtd'], color='gray')\n",
+    "grafico_barras = plt.bar(df4['#Nome_da_Administradora'], df4['qtd'], color='gray')\n",
     "plt.xlabel('Empresas')\n",
     "plt.ylabel('QTD')\n",
     "\n",
@@ -1177,17 +1184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x211a7555b80>,\n",
-       "  <matplotlib.patches.Wedge at 0x211a7594f80>,\n",
-       "  <matplotlib.patches.Wedge at 0x211a7555940>,\n",
-       "  <matplotlib.patches.Wedge at 0x211a75556d0>,\n",
-       "  <matplotlib.patches.Wedge at 0x211a75a2a50>],\n",
+       "([<matplotlib.patches.Wedge at 0x234ddb0afc0>,\n",
+       "  <matplotlib.patches.Wedge at 0x234dc3cbb30>,\n",
+       "  <matplotlib.patches.Wedge at 0x234ddb0baa0>,\n",
+       "  <matplotlib.patches.Wedge at 0x234ddb0c2f0>,\n",
+       "  <matplotlib.patches.Wedge at 0x234ddb0ca70>],\n",
        " [Text(0.6996901994181574, 0.8487836148502039, 'BRADESCO CONS. LTDA.                                        '),\n",
        "  Text(-0.7683911707930979, 0.7871308713595296, 'PORTO SEGURO ADM. CONS. LTDA                                '),\n",
        "  Text(-0.8982268641568711, -0.7957314248582331, 'ITAÚ ADM DE CONSÓRCIOS LTDA                                 '),\n",
@@ -1200,7 +1207,7 @@
        "  Text(0.582275429610612, -0.14475953879374318, '7.8%')])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1217,12 +1224,12 @@
    ],
    "source": [
     "five = (0,0,0.1,0,0)\n",
-    "plt.pie(df_ordenado_quantidade['NPL_NAO_CONT'], labels=df_ordenado_quantidade['#Nome_da_Administradora'], shadow=True, autopct='%1.1f%%', explode=five)"
+    "plt.pie(df4['NPL_NAO_CONT'], labels=df4['#Nome_da_Administradora'], shadow=True, autopct='%1.1f%%', explode=five)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1460,13 +1467,13 @@
     }
    ],
    "source": [
-    "display(df_ordenado_quantidade.columns)\n",
+    "display(df4.columns)\n",
     "display(df_uf2.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1788,9 +1795,190 @@
    "source": [
     "colunas_desejadas = ['Unidade_da_Federação_do_consorciado', 'qtd_apareceu_estado', 'qtd_ativos_nao_contemplad', 'qtd_adesao', 'nm_empresa']\n",
     "\n",
-    "resultado_left_join = pd.merge(df_ordenado_quantidade, df_uf2[colunas_desejadas], \n",
+    "df5 = pd.merge(df4, df_uf2[colunas_desejadas], \n",
     "                               left_on='#Nome_da_Administradora', right_on='nm_empresa', how='left')\n",
-    "display(resultado_left_join)"
+    "\n",
+    "display(df5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\joth1\\AppData\\Local\\Temp\\ipykernel_55108\\3141547898.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  empresa_nome_analitico['Unidade_da_Federação_do_consorciado'] = empresa_nome_analitico['Unidade_da_Federação_do_consorciado'].fillna('Nao filtrado')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#Nome_da_Administradora</th>\n",
+       "      <th>Unidade_da_Federação_do_consorciado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
+       "      <td>MG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
+       "      <td>RJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BRADESCO CONS. LTDA.                          ...</td>\n",
+       "      <td>BA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
+       "      <td>RR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
+       "      <td>SE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>ITAÚ ADM DE CONSÓRCIOS LTDA                   ...</td>\n",
+       "      <td>AC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>HS ADM CONS LTDA                              ...</td>\n",
+       "      <td>Nao filtrado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>EMBRACON ADM CONS LTDA                        ...</td>\n",
+       "      <td>Nao filtrado</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>83 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              #Nome_da_Administradora  \\\n",
+       "0   BRADESCO CONS. LTDA.                          ...   \n",
+       "1   BRADESCO CONS. LTDA.                          ...   \n",
+       "2   BRADESCO CONS. LTDA.                          ...   \n",
+       "3   BRADESCO CONS. LTDA.                          ...   \n",
+       "4   BRADESCO CONS. LTDA.                          ...   \n",
+       "..                                                ...   \n",
+       "78  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...   \n",
+       "79  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...   \n",
+       "80  ITAÚ ADM DE CONSÓRCIOS LTDA                   ...   \n",
+       "81  HS ADM CONS LTDA                              ...   \n",
+       "82  EMBRACON ADM CONS LTDA                        ...   \n",
+       "\n",
+       "   Unidade_da_Federação_do_consorciado  \n",
+       "0                                   SP  \n",
+       "1                                   MG  \n",
+       "2                                   RJ  \n",
+       "3                                   PR  \n",
+       "4                                   BA  \n",
+       "..                                 ...  \n",
+       "78                                  RR  \n",
+       "79                                  SE  \n",
+       "80                                  AC  \n",
+       "81                        Nao filtrado  \n",
+       "82                        Nao filtrado  \n",
+       "\n",
+       "[83 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "empresa_nome_analitico = df5[['#Nome_da_Administradora', 'Unidade_da_Federação_do_consorciado']]\n",
+    "\n",
+    "empresa_nome_analitico['Unidade_da_Federação_do_consorciado'] = empresa_nome_analitico['Unidade_da_Federação_do_consorciado'].fillna('Nao filtrado')\n",
+    "display(empresa_nome_analitico)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'executado: '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'08/01/2024 02:25:30'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import datetime \n",
+    "\n",
+    "agora = datetime.datetime.now()\n",
+    "formato_dia_hora = agora.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
+    "\n",
+    "caminho = 'analitico_bacen.xlsx'\n",
+    "\n",
+    "df5.to_excel(caminho, sheet_name='Fonte_dados', index=False)\n",
+    "display('executado: ', formato_dia_hora)"
    ]
   }
  ],
